// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Optimizely App should render the editor page 1`] = `
<div
  class="css-175t7kh"
  data-test-id="editor-page"
>
  <div
    class="css-3p38p2"
  >
    <div
      class="css-1eow32f"
    >
      <svg
        class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-uoder"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <span>
        Select experiment
      </span>
    </div>
    <svg
      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-13af3fo"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M8.62623 18.7071C8.2357 18.3166 8.2357 17.6834 8.62623 17.2929L13.9191 12L8.62623 6.70711C8.2357 6.31658 8.2357 5.68342 8.62623 5.29289C9.01675 4.90237 9.64992 4.90237 10.0404 5.29289L16.0404 11.2929C16.431 11.6834 16.431 12.3166 16.0404 12.7071L10.0404 18.7071C9.64992 19.0976 9.01675 19.0976 8.62623 18.7071Z"
      />
    </svg>
    <div
      class="css-1eow32f"
    >
      <svg
        class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-uoder"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <span>
        Add content
      </span>
    </div>
    <svg
      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-13af3fo"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M8.62623 18.7071C8.2357 18.3166 8.2357 17.6834 8.62623 17.2929L13.9191 12L8.62623 6.70711C8.2357 6.31658 8.2357 5.68342 8.62623 5.29289C9.01675 4.90237 9.64992 4.90237 10.0404 5.29289L16.0404 11.2929C16.431 11.6834 16.431 12.3166 16.0404 12.7071L10.0404 18.7071C9.64992 19.0976 9.01675 19.0976 8.62623 18.7071Z"
      />
    </svg>
    <div
      class="css-1eow32f"
    >
      <svg
        class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-uoder"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <span>
        Publish variations
      </span>
    </div>
    <svg
      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-13af3fo"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M8.62623 18.7071C8.2357 18.3166 8.2357 17.6834 8.62623 17.2929L13.9191 12L8.62623 6.70711C8.2357 6.31658 8.2357 5.68342 8.62623 5.29289C9.01675 4.90237 9.64992 4.90237 10.0404 5.29289L16.0404 11.2929C16.431 11.6834 16.431 12.3166 16.0404 12.7071L10.0404 18.7071C9.64992 19.0976 9.01675 19.0976 8.62623 18.7071Z"
      />
    </svg>
    <div
      class="css-1eow32f"
    >
      <svg
        class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD css-uoder"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <span>
        Start experiment
      </span>
    </div>
  </div>
  <hr
    class="css-10hsrou"
  />
  <h2
    class="Heading__Heading___83D3K css-1fobf8d"
    data-test-id="cf-ui-heading"
  >
    Referenced in:
  </h2>
  <div
    class="css-1y5g446"
  >
    <svg
      aria-label="Loading component..."
      class="SkeletonContainer__SkeletonContainer___23jiu"
      data-test-id="cf-ui-skeleton-form"
      height="30px"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width="100%"
    >
      <title>
        Loading component...
      </title>
      <rect
        clip-path="url(#references-section)"
        height="100%"
        style="fill: url(#cf-ui-skeleton-clip-gradient-0);"
        width="100%"
        x="0"
        y="0"
      />
      <defs>
        <clippath
          id="references-section"
        >
          <rect
            height="16"
            rx="0"
            ry="0"
            width="100%"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="cf-ui-skeleton-clip-gradient-0"
        >
          <stop
            offset="0%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              dur="2s"
              id="animation-1"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#f7f9fa"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-1.begin+0.25s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-1.begin+0.5s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
  <hr
    class="css-10hsrou"
  />
  <h2
    class="Heading__Heading___83D3K css-1fobf8d"
    data-test-id="cf-ui-heading"
  >
    Experiment:
  </h2>
  <div
    class="SelectField__SelectField___kbQlf"
    data-test-id="cf-ui-select-field"
  >
    <div
      class="SelectField__SelectField__label-wrapper___3jGwo"
    >
      <label
        class="FormLabel__FormLabel___3d6zQ"
        data-test-id="cf-ui-form-label"
        for="experiment"
      >
        Optimizely experiment
        <span
          class="FormLabel__FormLabel__required-text___3mvdm"
        >
          (
          required
          )
        </span>
      </label>
    </div>
    <div
      class="Select__Select__wrapper___2mbYV Select__Select--large___1HaJb"
    >
      <select
        aria-label="experiment"
        class="Select__Select___2Gi9N a11y__focus-border--default___60AXp Select__Select--disabled___156vR"
        data-test-id="cf-ui-select"
        disabled=""
        id="experiment"
        name="experiment"
        required=""
      >
        <option
          data-test-id="cf-ui-select-option"
          value="-1"
        >
          Fetching experiments...
        </option>
      </select>
      <svg
        class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Select__Select__icon___OBmvS"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
        />
      </svg>
    </div>
  </div>
  <hr
    class="css-10hsrou"
  />
  <h2
    class="Heading__Heading___83D3K"
    data-test-id="cf-ui-heading"
  >
    Variations:
  </h2>
  <div
    class="css-1pfvl5o"
  >
    <svg
      aria-label="Loading component..."
      class="SkeletonContainer__SkeletonContainer___23jiu"
      data-test-id="cf-ui-skeleton-form"
      height="100"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width="100%"
    >
      <title>
        Loading component...
      </title>
      <rect
        clip-path="url(#variations-section)"
        height="100%"
        style="fill: url(#cf-ui-skeleton-clip-gradient-2);"
        width="100%"
        x="0"
        y="0"
      />
      <defs>
        <clippath
          id="variations-section"
        >
          <rect
            height="16"
            rx="0"
            ry="0"
            width="100%"
            x="0"
            y="20"
          />
          <rect
            height="16"
            rx="0"
            ry="0"
            width="100%"
            x="0"
            y="44"
          />
          <rect
            height="16"
            rx="0"
            ry="0"
            width="80%"
            x="0"
            y="68"
          />
        </clippath>
        <lineargradient
          id="cf-ui-skeleton-clip-gradient-2"
        >
          <stop
            offset="0%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              dur="2s"
              id="animation-3"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#f7f9fa"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-3.begin+0.25s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-3.begin+0.5s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Optimizely App should render the incorrect type message 1`] = `
<div
  class="css-hvj582"
  data-test-id="incorrect-type"
>
  <div
    class="Note__Note___2eSKN Note__Note--negative___3fkwL"
    data-test-id="cf-ui-note"
  >
    <div
      class="Note__Note__icon___20RqC"
    >
      <svg
        class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--negative___1dled"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
    </div>
    <div
      class="Note__Note__info___2m_-K"
    >
      <div
        class="Note__Note__title___2nwpx"
      >
        Extension "undefined" cannot be assigned to this content type
      </div>
      <div
        class="Note__Note__content___H1pf-"
      >
        <div>
          <strong>
            Required:
          </strong>
           
          experimentTitle (Symbol), experimentId (Symbol), experimentKey (Symbol), meta (Object), variations (Array)
        </div>
        <div>
          <strong>
            Missing:
          </strong>
           
          experimentKey (Symbol)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Optimizely App should render the missing project on the sidebar 1`] = `
<div
  class="css-hvj582"
  data-test-id="missing-project"
>
  <div
    class="Note__Note___2eSKN Note__Note--negative___3fkwL"
    data-test-id="cf-ui-note"
  >
    <div
      class="Note__Note__icon___20RqC"
    >
      <svg
        class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--negative___1dled"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
    </div>
    <div
      class="Note__Note__info___2m_-K"
    >
      <div
        class="Note__Note__content___H1pf-"
      >
        Please, set 
        <strong>
          Optimizely Project ID
        </strong>
         in Extension settings.
      </div>
    </div>
  </div>
</div>
`;
